meta-data/scoreboard/objects/Highlight__c.object
<CustomObject>
    <fields>
        <fullName>Game__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Game</label>
        <referenceTo>Game__c</referenceTo>
        <relationshipLabel>Highlights</relationshipLabel>
        <relationshipName>Highlights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Highlight_Caption__c</fullName>
        <label>Highlight Caption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Highlights</relationshipLabel>
        <relationshipName>Highlights</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Highlight</label>
    <nameField>
        <label>Highlights Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Highlights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>